# aoc-2024

./: .editorconfig  Cargo.toml
src/: lib.rs
src/day_1/: mod.rs  parser.rs  sorter.rs
src/day_1_part_1/: main.rs
src/day_1_part_2/: main.rs
src/day_2/: mod.rs  parser.rs  safety.rs
src/day_2_part_1/: main.rs
