[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1_part_1"
path = "src/day_1_part_1/main.rs"

[[bin]]
name = "day_1_part_2"
path = "src/day_1_part_2/main.rs"

[[bin]]
name = "day_2_part_1"
path = "src/day_2_part_1/main.rs"

[dependencies]
thiserror = "2"
anyhow = "1"
